--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Livro SaaS</title>
+    <title>Livro SaaS - Vercel</title>
   </head>
   <body>
     <section class="cover">
