--- a/src/index.html
+++ b/src/index.html
@@ -77,5 +77,17 @@
         </div>
       </div>
     </section>
+    <section class="preco">
+      <div class="info">
+        <h1>Preço Simples e Transparente</h1>
+        <p>
+          Pra que inúmeros planos quando nós sabemos exatamente o que é melhor
+          para você? Assine o nosso plano mensal Pro Premium VIP e garanta
+          mensalmente um ebook novo de programação. E por menos de um café por
+          dia.
+        </p>
+        <img src="./images/Plan Card.png" alt="" srcset="" />
+      </div>
+    </section>
   </body>
 </html>
