--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
             <ul>
               <li><a href="*">Funcionamento</a></li>
               <li><a href="*">Preço</a></li>
-              <li><a href="*">Log in</a></li>
+              <li>
+                <a id="login" href="*">Login</a>
+              </li>
             </ul>
           </div>
           <div class="toogle-btn">
