add the final and footer section

--- a/src/index.html
+++ b/src/index.html
@@ -91,5 +91,20 @@
         <img src="./images/Plan Card.png" alt="" srcset="" />
       </div>
     </section>
+    <section class="final">
+      <h1>Pronto Para Mudar Sua Vida?</h1>
+      <p>
+        Faça como milhares de outras pessoas. Assine nosso produto e<br />
+        tenha garantido seus estudos
+      </p>
+      <div class="cta">
+        <button type="button">Assine Agora</button>
+        <p>Comece sua assinatura agora mesmo. Cancele quando quiser.</p>
+      </div>
+    </section>
+    <footer>
+      <img src="./images/Logo.png" alt="" srcset="" />
+      <p>© 2024 LivroSaaS. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
